--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 							</header>
 							<div class="content">
 								<p>I am an Artificial Intelligence student <br />
-								with valuable Data Analysis skills in SQL, Python, Tableau, and R <br />
-								Seeking Fall Internship Job for Data Analysis</p>
+								with valuable AI Engineer skills in Python, Pytorch, OCR and NLP task <br />
+								Seeking Spring Internship Job for AI Engineer</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Project</a></li>
 								</ul>
@@ -62,8 +62,8 @@
 										<img src="images/th11.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ntthienphuc/Cancer_death_rate.git" class="link">Cancer Death Rate</a></h3>
-										<p>Using Pandas, Matplotib, Seaborn to analysts, explore, visualize data to identify factors affecting cancer death rate</p>
+										<h3><a href="https://github.com/ntthienphuc/Smart-Search-Engine.git" class="link">Smart Search Engine</a></h3>
+										<p>harnessing the power of OCR and text embeddings, this application empowers users to search for images via their embedded textual content</p>
 									</header>
 								</article>
 								<article>
@@ -71,8 +71,8 @@
 										<img src="images/th21.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ntthienphuc/World_cup.git" class="link">World Cup Prediction</a></h3>
-										<p>Using Pandas, Seaborn, Pyplot to analysts, visualize, using LR, RF, KNN algorithm to predict the Word Cup score</p>
+										<h3><a href="https://github.com/ntthienphuc/tableDetection.git" class="link">Table Detection</a></h3>
+										<p>Reliable system for detecting tables in documents, leveraging the potential of YOLOv8 model and utilizing the rich WTW Dataset.</p>
 									</header>
 								</article>
 								<article>
@@ -86,11 +86,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/th4.png" alt="" />
+										<img src="images/th21.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ntthienphuc/Car_price.git" class="link">Car price</a></h3>
-										<p>Using Pandas, Matplotib, Seaborn and Scipy to analysts, explore, visualize data</p>
+										<h3><a href="https://github.com/ntthienphuc/World_cup.git" class="link">World Cup Prediction</a></h3>
+										<p>Using Pandas, Seaborn, Pyplot to analysts, visualize, using LR, RF, KNN algorithm to predict the Word Cup score</p>
 									</header>
 								</article>
 								<article>
@@ -104,11 +104,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/th6.jpg" alt="" />
+										<img src="images/th3.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ntthienphuc/Covid_Visualization.git" class="link">Covid pandemic</a></h3>
-										<p>Using PowerBI to visualize data about Covid pandemic</p>
+										<h3><a href="https://github.com/ntthienphuc/House_rented.git" class="link">House rented</a></h3>
+										<p>Using SQL to create database, insert, manage and retrieve data for special tasks.</p>
 									</header>
 								</article>
 							</section>
