--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/th11.jpg" alt="" />
+										<img src="images/best-search-engine-670x335.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/ntthienphuc/Smart-Search-Engine.git" class="link">Smart Search Engine</a></h3>
@@ -68,7 +68,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/th21.jpg" alt="" />
+										<img src="images/0f2Sv8W.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/ntthienphuc/tableDetection.git" class="link">Table Detection</a></h3>
