--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							</header>
 							<div class="content">
 								<p>I am an Artificial Intelligence student <br />
-								with valuable AI Engineer skills in Python, Pytorch, OCR and NLP task <br />
+								with valuable AI Engineer and Data Science skills in SQL, Python, Pytorch, OCR and NLP task <br />
 								Seeking Spring Internship Job for AI Engineer</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Project</a></li>
@@ -63,7 +63,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/ntthienphuc/Smart-Search-Engine.git" class="link">Smart Search Engine</a></h3>
-										<p>harnessing the power of OCR and text embeddings, this application empowers users to search for images via their embedded textual content</p>
+										<p>Harnessing the power of Optical Character Recognition (OCR) and sophisticated text embeddings, this application empowers users to search for images via their embedded textual content, ensuring remarkable precision and relevance.</p>
 									</header>
 								</article>
 								<article>
@@ -77,11 +77,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/th3.jpg" alt="" />
+										<img src="images/sign-language.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/ntthienphuc/House_rented.git" class="link">House rented</a></h3>
-										<p>Using SQL to create database, insert, manage and retrieve data for special tasks.</p>
+										<h3><a href="https://github.com/ntthienphuc/VietnameseSignLanguage.git" class="link">Vietnamese Sign Language Recognition</a></h3>
+										<p>A real-time hand gesture recognition system using of OpenCV, Mediapipe, and TensorFlow to detect hand gestures and interpret them into predefined actions or commands.</p>
 									</header>
 								</article>
 								<article>
