--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
 								</article>
 								<article>
 									<span class="image">
+										<img src="images/men-size-chart.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://github.com/ntthienphuc/Real-time_Body_Measurement_using_Pose_Estimation_and_Deep_Learning.git" class="link">Real-time Body Measurement</a></h3>
+										<p>A real-time solution for body measurement using MediaPipe and OpenCV to accurately measure various body parts such as hips, shoulders, upper body, and legs.</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
 										<img src="images/th21.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/ntthienphuc/World_cup.git" class="link">World Cup Prediction</a></h3>
 										<p>Using Pandas, Seaborn, Pyplot to analysts, visualize, using LR, RF, KNN algorithm to predict the Word Cup score</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/th5.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="https://github.com/ntthienphuc/Currency_rate.git" class="link">Currency Rate</a></h3>
-										<p>Web crawling world currency rates and zoning on world map</p>
 									</header>
 								</article>
 								<article>
