--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/ntthienphuc/Smart-Search-Engine.git" class="link">Smart Search Engine</a></h3>
-										<p>Harnessing the power of Optical Character Recognition (OCR) and sophisticated text embeddings, this application empowers users to search for images via their embedded textual content, ensuring remarkable precision and relevance.</p>
+										<p>Harnessing the power of OCR and text embeddings, this application empowers users to search for images via their embedded textual content, ensuring remarkable precision and relevance.</p>
 									</header>
 								</article>
 								<article>
