--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 							</header>
 							<div class="content">
 								<p>I am an Artificial Intelligence student <br />
-								with valuable AI Engineer and Data Science skills in SQL, Python, Pytorch, OCR and NLP task <br />
-								Seeking Spring Internship Job for AI Engineer</p>
+								with valuable AI Engineer skills in Python, Pytorch, OCR and NLP task <br />
+								Seeking Fall Internship Job for AI Engineer</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Project</a></li>
 								</ul>
